# CLASH

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/expand/: glob.cpp  glob.h  glob_expansion.cpp  glob_expansion.h  ltr_scanner.cpp  ltr_scanner.h  tilde.cpp  tilde.h
src/lexer/: commandSplitter.cpp  commandSplitter.h  wordSplitter.cpp  wordSplitter.h
src/parser/: parseCommand.cpp  parseCommand.h
src/process/: spawn.cpp  spawn.h
src/shell/: engine.cpp  engine.h  repl.cpp  repl.h  shell.cpp  shell.h
src/util/: env.cpp  env.h  stringUtil.cpp  stringUtil.h
src/util/error/: ExecutionError.h  SyntaxError.h  clashError.h  executionError.h  incompleteInput.h  syntaxError.h
src/util/model/: argvWrapper.h  command.h  engineResponse.h  executeProcessResult.h  pipe.h  redirectionWrapper.h  variable.h  word.h
test/: CMakeLists.txt  command_splitter_test.cc  expand_test.cc  glob_expand_test.cc  glob_test.cc  ltr_scanner_test.cc  parse_command_test.cc  process_test.cc  word_splitter_test.cc
